feat(native): bindings generated from the header, and a check that they are right
Faz 3. C# and Java reach the engine now, and neither was written by hand.

Four hand-maintained copies of fifty-two signatures is four places for a struct
field to drift out of order, and a field in the wrong order is not a compile
error in C#, in Java, or anywhere else — it is a plausible-looking number read
from the wrong offset. Faz 0 shipped hand-written sketches deliberately, to
prove the ABI was bindable at all; by the time Faz 3 arrived they were already
missing the four entry points Faz 1 added, which is that argument made
concretely. They are deleted.

tools/generate_bindings.py reads photon.h and emits the P/Invoke layer, the
Panama layer, and — the part that matters — tests/abi_layout_test.c. The
bindings place every field by an offset the generator computed from its own
model of the C type system, and that model could be wrong. The generated C file
asserts each of those offsets against what the compiler actually produces and is
built as part of the suite, so a wrong model is a failed build here rather than
a corrupted descriptor in a host six months from now. Eleven structs, every
field.

It is not a C parser and does not try to be. photon.h is deliberately narrow —
fixed-width scalars, one enum shape, descriptors that start with struct_size —
and the generator understands exactly that much and stops on anything else,
which is how three of its own bugs surfaced while writing it: function-pointer
typedefs as struct members, a field called `size` colliding with the layout
constant of the same name, and uint8_t buffers being mistaken for out-parameters.

bindings/java/PhotonSmokeTest.java drives all 52 entry points through Panama and
fails if it missed one — the tally is checked against a list the same generator
run emitted, so "calls every entry point" is verified rather than asserted. It
runs under ctest wherever a JDK 22+ is present. Not under a sanitizer: the JVM
is uninst